--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "proyecto-ignacio",
+  "name": "rap-nation",
   "version": "1.0.0",
-  "description": "Proyecto Vite.",
+  "description": "Proyecto Rap Nation desarrollado con Vite, SCSS y JavaScript.",
   "main": "index.html",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "vite": "^4.5.5"
+  "keywords": ["vite", "scss", "javascript", "responsive", "project"],
+  "author": "Ignacio Ramos Martín",
+  "license": "MIT",
+  "devDependencies": {
+    "vite": "^4.0.0",
+    "sass": "^1.65.0"
   }
 }
